Update pages hyperlinks.

--- a/WebContent/CleanZone/form-validation.html
+++ b/WebContent/CleanZone/form-validation.html
@@ -223,8 +223,8 @@
 									<li><a href="pages-404.html">404 Page</a></li>
 									<li><a href="pages-500.html">500 Page</a></li>
 									<li><a href="sign-up.html"><span class="label label-primary pull-right">New</span>Sign Up</a></li>
-									<li><a href="pages-forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
-									<li><a href="pages-profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
+									<li><a href="forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
+									<li><a href="profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
 									<li><a href="pages-search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
 									<li><a href="pages-calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
 									<li><a href="pages-code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
