--- a/WebContent/CleanZone/form-validation.html
+++ b/WebContent/CleanZone/form-validation.html
@@ -18,6 +18,11 @@
 <link rel="stylesheet" type="text/css" href="js/bootstrap.slider/css/slider.css" />
 <link href="css/style.css" rel="stylesheet" />
 <link rel="stylesheet" href="fonts/font-awesome-4/css/font-awesome.min.css">
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
 <link rel="stylesheet" href="css/pygments.css">
 <link rel="stylesheet" type="text/css" href="js/jquery.nanoscroller/nanoscroller.css" />
 
@@ -219,12 +224,12 @@
 									<li><a href="blank.html">Blank Page</a></li>
 									<li><a href="blank-header.html">Blank Page Header</a></li>
 									<li><a href="blank-aside.html">Blank Page Aside</a></li>
-									<li><a href="pages-login.html">Login</a></li>
-									<li><a href="pages-404.html">404 Page</a></li>
+									<li><a href="login.html">Login</a></li>
+									<li><a href="404.html">404 Page</a></li>
 									<li><a href="pages-500.html">500 Page</a></li>
 									<li><a href="sign-up.html"><span class="label label-primary pull-right">New</span>Sign Up</a></li>
-									<li><a href="pages-forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
-									<li><a href="pages-profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
+									<li><a href="forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
+									<li><a href="profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
 									<li><a href="pages-search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
 									<li><a href="pages-calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
 									<li><a href="pages-code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
