--- a/WebContent/CleanZone/login.html
+++ b/WebContent/CleanZone/login.html
@@ -14,6 +14,12 @@
 
 <link rel="stylesheet" href="fonts/font-awesome-4/css/font-awesome.min.css">
 
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
+    
 <!-- Custom styles for this template -->
 <link href="css/style.css" rel="stylesheet" />
 
