--- a/WebContent/CleanZone/form-upload.html
+++ b/WebContent/CleanZone/form-upload.html
@@ -26,6 +26,8 @@
 <link rel="stylesheet" type="text/css" href="js/bootstrap.datetimepicker/css/bootstrap-datetimepicker.min.css" />
 <link rel="stylesheet" type="text/css" href="js/jquery.select2/select2.css" />
 <link rel="stylesheet" type="text/css" href="js/bootstrap.slider/css/slider.css" />
+<link rel="stylesheet" type="text/css" href="js/dropzone/css/dropzone.css" />
+<!-- Custom styles for this template -->
 <link href="css/style.css" rel="stylesheet" />
 
 </head>
@@ -151,6 +153,7 @@
 		</div>
 	</div>
 
+
 	<div id="cl-wrapper">
 		<div class="cl-sidebar">
 			<div class="cl-toggle">
@@ -198,7 +201,7 @@
 									<li><a href="form-masks.html">Input Masks</a></li>
 									<li><a href="form-multiselect.html"><span class="label label-primary pull-right">New</span>Multi Select</a></li>
 									<li><a href="form-wysiwyg.html"><span class="label label-primary pull-right">New</span>WYSIWYG Editor</a></li>
-									<li><a href="form-upload.html"><span class="label label-primary pull-right">New</span>Multi Upload</a></li>
+									<li class="active"><a href="form-upload.html"><span class="label label-primary pull-right">New</span>Multi Upload</a></li>
 								</ul></li>
 							<li><a href="#"><i class="fa fa-table"></i><span>Tables</span></a>
 								<ul class="sub-menu">
@@ -220,7 +223,7 @@
 							<li><a href="charts.html"><i class="fa fa-bar-chart-o"></i><span>Charts</span></a></li>
 							<li><a href="#"><i class="fa fa-file"></i><span>Pages</span></a>
 								<ul class="sub-menu">
-									<li class="active"><a href="blank.html">Blank Page</a></li>
+									<li><a href="blank.html">Blank Page</a></li>
 									<li><a href="blank-header.html">Blank Page Header</a></li>
 									<li><a href="blank-aside.html">Blank Page Aside</a></li>
 									<li><a href="login.html">Login</a></li>
@@ -248,11 +251,18 @@
 		</div>
 
 		<div class="container-fluid" id="pcont">
-
-			<div class="cl-mcont">
-				<h3 class="text-center">Content goes here!</h3>
+			<div class="page-head">
+				<h2>Multi Upload</h2>
+				<ol class="breadcrumb">
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Forms</a></li>
+					<li class="active">Multi Upload</li>
+				</ol>
 			</div>
+			<div class="cl-mcont">
+				<form action="js/dropzone/upload.php" class="dropzone" id="my-awesome-dropzone"></form>
 
+			</div>
 		</div>
 
 	</div>
@@ -261,6 +271,7 @@
 	<script type="text/javascript" src="js/jquery.nanoscroller/jquery.nanoscroller.js"></script>
 	<script type="text/javascript" src="js/jquery.sparkline/jquery.sparkline.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easypiechart/jquery.easy-pie-chart.js"></script>
+	<script type="text/javascript" src="js/behaviour/general.js"></script>
 	<script src="js/jquery.ui/jquery-ui.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/jquery.nestable/jquery.nestable.js"></script>
 	<script type="text/javascript" src="js/bootstrap.switch/bootstrap-switch.min.js"></script>
@@ -268,7 +279,7 @@
 	<script src="js/jquery.select2/select2.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap.slider/js/bootstrap-slider.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/jquery.gritter/js/jquery.gritter.js"></script>
-	<script type="text/javascript" src="js/behaviour/general.js"></script>
+	<script type="text/javascript" src="js/dropzone/dropzone.js"></script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
