--- a/WebContent/CleanZone/form-validation.html
+++ b/WebContent/CleanZone/form-validation.html
@@ -177,7 +177,7 @@
 							<li><a href="#"><i class="fa fa-home"></i><span>Dashboard</span></a>
 								<ul class="sub-menu">
 									<li><a href="index.html">Version 1</a></li>
-									<li><a href="dashboard2.html"><span class="label label-primary pull-right">New</span> Version 2</a></li>
+									<li><a href="index2.html"><span class="label label-primary pull-right">New</span> Version 2</a></li>
 								</ul></li>
 							<li><a href="#"><i class="fa fa-smile-o"></i><span>UI Elements</span></a>
 								<ul class="sub-menu">
@@ -226,15 +226,15 @@
 									<li><a href="blank-aside.html">Blank Page Aside</a></li>
 									<li><a href="login.html">Login</a></li>
 									<li><a href="404.html">404 Page</a></li>
-									<li><a href="pages-500.html">500 Page</a></li>
+									<li><a href="500.html">500 Page</a></li>
 									<li><a href="sign-up.html"><span class="label label-primary pull-right">New</span>Sign Up</a></li>
 									<li><a href="forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
 									<li><a href="profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
-									<li><a href="pages-search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
-									<li><a href="pages-calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
-									<li><a href="pages-code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
-									<li><a href="pages-gallery.html">Gallery</a></li>
-									<li><a href="pages-timeline.html">Timeline</a></li>
+									<li><a href="search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
+									<li><a href="calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
+									<li><a href="code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
+									<li><a href="gallery.html">Gallery</a></li>
+									<li><a href="timeline.html">Timeline</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -281,6 +281,10 @@
 										<label>Repeat Password</label> <input data-parsley-equalto="#pass1" type="password" required placeholder="Password"
 											class="form-control">
 									</div>
+                                    <div class="form-group">
+                                        <label>Repeat Password</label>
+                                        <input type="file" required class="form-control">
+                                    </div>
 									<div class="checkbox">
 										<label> <input type="checkbox" name="remember"> Remember me
 										</label>
