Update pages hyperlinks.

--- a/WebContent/CleanZone/gallery.html
+++ b/WebContent/CleanZone/gallery.html
@@ -228,15 +228,15 @@
 									<li><a href="blank-aside.html">Blank Page Aside</a></li>
 									<li><a href="login.html">Login</a></li>
 									<li><a href="404.html">404 Page</a></li>
-									<li><a href="pages-500.html">500 Page</a></li>
+									<li><a href="500.html">500 Page</a></li>
 									<li><a href="sign-up.html"><span class="label label-primary pull-right">New</span>Sign Up</a></li>
 									<li><a href="forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
 									<li><a href="profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
-									<li><a href="pages-search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
-									<li><a href="pages-calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
-									<li><a href="pages-code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
-									<li class="active"><a href="pages-gallery.html">Gallery</a></li>
-									<li><a href="pages-timeline.html">Timeline</a></li>
+									<li><a href="search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
+									<li><a href="calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
+									<li><a href="code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
+									<li class="active"><a href="gallery.html">Gallery</a></li>
+									<li><a href="timeline.html">Timeline</a></li>
 								</ul></li>
 						</ul>
 					</div>
