Add some pages.

--- a/WebContent/CleanZone/form-masks.html
+++ b/WebContent/CleanZone/form-masks.html
@@ -221,20 +221,20 @@
 							<li><a href="charts.html"><i class="fa fa-bar-chart-o"></i><span>Charts</span></a></li>
 							<li><a href="#"><i class="fa fa-file"></i><span>Pages</span></a>
 								<ul class="sub-menu">
-									<li><a href="pages-blank.html">Blank Page</a></li>
-									<li><a href="pages-blank-header.html">Blank Page Header</a></li>
-									<li><a href="pages-blank-aside.html">Blank Page Aside</a></li>
-									<li><a href="pages-login.html">Login</a></li>
-									<li><a href="pages-404.html">404 Page</a></li>
-									<li><a href="pages-500.html">500 Page</a></li>
-									<li><a href="pages-sign-up.html"><span class="label label-primary pull-right">New</span>Sign Up</a></li>
-									<li><a href="pages-forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
-									<li><a href="pages-profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
-									<li><a href="pages-search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
-									<li><a href="pages-calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
-									<li><a href="pages-code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
-									<li><a href="pages-gallery.html">Gallery</a></li>
-									<li><a href="pages-timeline.html">Timeline</a></li>
+									<li><a href="blank.html">Blank Page</a></li>
+									<li><a href="blank-header.html">Blank Page Header</a></li>
+									<li><a href="blank-aside.html">Blank Page Aside</a></li>
+									<li><a href="login.html">Login</a></li>
+									<li><a href="404.html">404 Page</a></li>
+									<li><a href="500.html">500 Page</a></li>
+									<li><a href="sign-up.html"><span class="label label-primary pull-right">New</span>Sign Up</a></li>
+									<li><a href="forgot-password.html"><span class="label label-primary pull-right">New</span>Forgot Password</a></li>
+									<li><a href="profile.html"><span class="label label-primary pull-right">New</span>Profile</a></li>
+									<li><a href="search.html"><span class="label label-primary pull-right">New</span>Search</a></li>
+									<li><a href="calendar.html"><span class="label label-primary pull-right">New</span>Calendar</a></li>
+									<li><a href="code-editor.html"><span class="label label-primary pull-right">New</span>Code Editor</a></li>
+									<li><a href="gallery.html">Gallery</a></li>
+									<li><a href="timeline.html">Timeline</a></li>
 								</ul></li>
 						</ul>
 					</div>
